// Restoration Diagnostic Schema
// Normalized schema for Assessment Engine with Questions, Answers, Guidance, Strategies, and Collaboration
// Visit dbdiagram.io/ and paste there the contents of this file to view this schema diagram

Enum project_type_enum {
  GEF_8
  WRI
  other
}

Enum answer_value_enum {
  yes
  partly
  no
  na
}

Enum theme_enum {
  Motivate
  Enable
  Implement
}

Enum assessment_status_enum {
  draft
  in_progress
  completed
  archived
}

// Removed enums (candidate entities on hold):
// strategy_scale_enum

Table lead {
  id varchar [pk, note: 'UUID v4']
  job_title varchar [null, note: 'Title: Mr/Mrs/Ms/Miss/Dr/Prof']
  name varchar [not null]
  email varchar [not null, note: 'Lowercase, validated. Not unique - multiple leads can share same email with different org/role']
  organization varchar [null]
  role varchar [null]
  gender varchar [null, note: 'Optional demographic field for reporting']
  age_range varchar [null, note: 'Optional demographic field for reporting']
  identity varchar [null, note: 'Optional demographic field for reporting']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Indexes {
    email [name: 'IDX_lead_email', note: 'Non-unique index for performance']
  }
}

Table region {
  id varchar [pk, note: 'UUID v4']
  region_name varchar [not null]
  geography_type varchar [not null, note: 'Watershed, Protected Area, etc.']
  countries text [null, note: 'Comma-separated or JSON']
  sub_region varchar [null]
  scope varchar [null]
  ecosystems text [not null, note: 'JSON array of selected ecosystems']
  gis_url text [null, note: 'Deferred to post-MVP']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table diagnostic {
  id varchar [pk, note: 'UUID v4']
  title varchar [not null, note: 'e.g., Restoration Diagnostic v1.0.0']
  description text [null]
  version varchar [not null, note: 'Semantic version: v1.0.0']
  language varchar [not null, note: 'ISO 639-1: en, es, pt, fr']
  created_at timestamp [default: `now()`]
  
  Indexes {
    (version, language) [unique]
  }
}

Table assessments {
  id varchar [pk, note: 'UUID v4']
  password_hash text [not null, note: 'bcrypt hashed password for assessment access']
  diagnostic_year varchar [not null, note: 'Year of diagnostic completion']
  project_type project_type_enum [not null, default: 'other']
  status assessment_status_enum [not null, default: 'draft']
  lead_id varchar [not null, note: 'Foreign key to lead table']
  region_id varchar [not null, note: 'Foreign key to region table']
  diagnostic_id varchar [not null, note: 'Foreign key to diagnostic table']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  submitted_at timestamp [null, note: 'When assessment was submitted/completed']
  title varchar [not null, default: 'Assessment Title']
  allow_data_sharing boolean [not null, default: true]
  
  Indexes {
    lead_id
    region_id
    diagnostic_id
    title
  }
}

Table question {
  id varchar [pk, note: 'UUID v4']
  diagnostic_id varchar [not null]
  question_code varchar [not null, note: 'e.g., M1, E5, I3']
  theme theme_enum [not null, note: 'Motivate, Enable, Implement']
  enabling_condition varchar [not null, note: 'e.g., a. Benefits, b. Awareness']
  key_success_factor varchar [not null, note: 'Short title of the question']
  minimal_key_success_factor varchar [not null, note: 'Compact title for navigation']
  definition text [null, note: 'Detailed explanation']
  question_text text [not null, note: 'The diagnostic question']
  considerations text [null, note: 'Additional context and guidance']
  follow_up_questions text [null, note: 'JSON array of follow-up prompts']
  strategy_examples text [null, note: 'Examples of strategies to address gaps']
  sort_order int [not null, note: 'Display order within theme']
  created_at timestamp [default: `now()`]
  
  Indexes {
    diagnostic_id
    (diagnostic_id, question_code) [unique]
    theme
  }
}

Table answer {
  id varchar [pk, note: 'UUID v4 - Composite PK part 1']
  updated_at timestamp [pk, note: 'Composite PK part 2 - enables history tracking']
  assessment_id varchar [not null]
  question_id varchar [not null]
  value answer_value_enum [null, note: 'yes, partly, no, na - null if unanswered']
  rationale text [null, note: 'Rich text answer explanation/justification']
  notes text [null, note: 'Notes tab content - general notes about question']
  created_at timestamp [default: `now()`]
  status answer_status_enum [not null, default: 'not_started']
  
  Note: 'Uses composite PK (id, updated_at) to maintain edit history. Multiple rows can share the same id.'
  
  Indexes {
    assessment_id
    question_id
    status
  }
}

Table contributor {
  id varchar [pk, note: 'UUID v4']
  name varchar [not null, note: 'Contributor full name']
  assessment_id varchar [not null]
  created_at timestamp [default: `now()`]
  
  Indexes {
    assessment_id
    (assessment_id, name) [unique]
  }
}

Table answer_contributor {
  contributor_id varchar [pk, note: 'Composite PK part 1']
  answer_id varchar [pk, note: 'Composite PK part 2']
  
  Note: 'Join table for many-to-many relationship between contributors and answers. No FK to answer table due to composite PK design.'
  
  Indexes {
    answer_id
  }
}

// Removed tables (candidate entities on hold):
// Table custom_topic - User-added custom questions/topics
// Table strategy - Action plans for addressing gaps

Ref: question.diagnostic_id > diagnostic.id [delete: cascade]
Ref: answer.assessment_id > assessments.id [delete: cascade]
Ref: answer.question_id > question.id [delete: restrict]
Ref: assessments.lead_id > lead.id [delete: cascade]
Ref: assessments.region_id > region.id [delete: cascade]
Ref: assessments.diagnostic_id > diagnostic.id [delete: restrict]
Ref: contributor.assessment_id > assessments.id [delete: cascade]
Ref: answer_contributor.contributor_id > contributor.id [delete: cascade]

// Notes:
// - Questions normalized out of diagnostic JSON into separate table
// - Answers table links assessments to questions with response values
// - Guidance content now embedded in Question fields (definition, considerations, strategyExamples)
// - Candidate tables on hold: custom_topic, strategy
// - Contributors: Free-form names scoped to assessment (no Lead relation)
// - AnswerContributor: Join table for per-question contributor selection
// - No FK from answer_contributor to answer due to Answer table's composite PK design
// - Unique constraint prevents duplicate answers per assessment/question
// - Cascade deletes for answers when assessment deleted
// - Restrict delete on questions, leads (preserve historical data)
// - Timestamps use created_at and updated_at where defined
